--- a/src/app/registroLogin/login/login.component.html
+++ b/src/app/registroLogin/login/login.component.html
@@ -16,6 +16,7 @@
         <button type="button" id="btnPredefinidos1" class="btn btn-outline-danger" (click)="User('paciente')">paciente</button>
         <button type="button" id="btnPredefinidos2" class="btn btn-outline-secondary" (click)="User('profesional')">profesional</button>
         <button type="button" id="btnPredefinidos3" class="btn btn-outline-dark" (click)="User('admin')">admin</button>
+        <button type="button" id="btnPredefinidos4" class="btn btn-outline-warning" (click)="User('pacienteReal')">pacienteReal</button>
       </th>
     </tr>
     <tr>
