--- a/src/app/principal/profesional/profesional.component.scss
+++ b/src/app/principal/profesional/profesional.component.scss
@@ -1,7 +1,7 @@
 .background1, .background2, .background3, .background4{
     display: flex;
     margin-top: 20%;
-    width: 104%;
+    width: 105%;
     background: darksalmon!important;
 }
 .btn{
@@ -10,5 +10,25 @@
     height: 15em;
 }
 h4{
-    font-size: 5rem;
+    font-size: 3.5rem;
+}
+
+.contenidoHorarios{
+    margin-top: 5%;
+    margin-left: 15%;
+}
+
+.turnosList{
+    width: 100%;
+    background-color: rosybrown;
+}
+
+.atenderTurnosList{
+    width: 100%;
+    height: 300px;
+    background-color: rosybrown;
+}
+
+.encuesta{
+    background: cornflowerblue;
 }
