--- a/src/app/registroLogin/registro/registro.component.html
+++ b/src/app/registroLogin/registro/registro.component.html
@@ -25,17 +25,23 @@
           <th colspan="2" class="table-success"><input type="password" placeholder="Ingrese Contraseña" [(ngModel)]='clave'></th>
         </tr>
         <tr>
-          <th class="table-primary"><label class="foto-1-label" for="customFileLang">Seleccione Foto 1</label></th>
-          <th class="table-warning"><input type="file" (change)="TomoFoto($event, 1)" class="foto-1-input" id="customFileLang1" lang="es"></th>
+          <th class="table-warning"><label class="foto-1-label" for="customFileLang">Seleccione Foto 1</label></th>
+          <th class="table-primary"><input type="file" (change)="TomoFoto($event, 1)" class="foto-1-input" id="customFileLang1" lang="es"></th>
         </tr>
         <tr>
           <th class="table-danger"><label class="foto-2-label" for="customFileLang">Seleccione Foto 2</label></th>
           <th class="table-warning"><input type="file" (change)="TomoFoto($event, 2)" class="foto-2-input" id="customFileLang2" lang="es"></th>
         </tr>
         <tr>
-          <th class="table-success"><button style="margin-left: 120%;" type="button" class="btn btn-outline-dark" (click)="Register()">Registrarse</button></th>
-          <th class="table-success"><button type="button" class="btn btn-outline-dark" (click)="Volver()">Volver</button>
-          </th>
+          <th class="table-primary"><input type="text" [(ngModel)]='valueCaptcha' disabled></th>
+          <th class="table-danger"><input type="text" placeholder="" [(ngModel)]='captcha'></th>
+        </tr>
+        <tr>
+          <th colspan="2" class="table-secondary"><p div="texto">{{mensaje}}</p></th>
+        </tr>
+        <tr>
+          <th class="table-success"><button type="button" class="btn btn-outline-dark" (click)="Volver()">Volver</button></th>
+          <th class="table-warning"><button type="button" class="btn btn-outline-dark" (click)="Register()">Registrarse</button></th>
         </tr>
       </ng-template>
     </table>
@@ -58,12 +64,12 @@
           <th colspan="2" class="table-success"><input type="password" placeholder="Ingrese Contraseña" [(ngModel)]='clave'></th>
         </tr>
         <tr>
-          <th class="table-danger"><label class="foto-1-label" for="customFileLang">Seleccione Foto 1</label></th>
-          <th class="table-primary"><input type="file" class="foto-1-input" id="customFileLang" lang="es"></th>
+          <th class="table-warning"><label class="foto-1-label" for="customFileLang">Seleccione Foto 1</label></th>
+          <th class="table-primary"><input type="file" (change)="TomoFoto($event, 1)" class="foto-1-input" id="customFileLang1" lang="es"></th>
         </tr>
         <tr>
-          <th class="table-primary"><label class="foto-2-label" for="customFileLang">Seleccione Foto 2</label></th>
-          <th class="table-warning"><input type="file" class="foto-2-input" id="customFileLang" lang="es"></th>
+          <th class="table-danger"><label class="foto-2-label" for="customFileLang">Seleccione Foto 2</label></th>
+          <th class="table-warning"><input type="file" (change)="TomoFoto($event, 2)" class="foto-2-input" id="customFileLang2" lang="es"></th>
         </tr>
         <tr>
           <th class="table-success"><input id="inputEspecialidad" type="text" placeholder="Especialidad" [(ngModel)]='agregoEspecialidad'></th>
@@ -74,6 +80,13 @@
             <li>{{item}}</li>
           </div>
         </ul>
+        <tr>
+          <th class="table-primary"><input type="text" [(ngModel)]='valueCaptcha' disabled></th>
+          <th class="table-danger"><input type="text" placeholder="" [(ngModel)]='captcha'></th>
+        </tr>
+        <tr>
+          <th colspan="2" class="table-secondary"><p div="texto">{{mensaje}}</p></th>
+        </tr>
         <tr>
           <th class="table-success"><button type="button" class="btn btn-outline-danger" (click)="Volver()">Volver</button></th>
           <th class="table-warning"><button type="button" class="btn btn-outline-dark" (click)="Register()">REGISTRARSE</button></th>
